--- a/Peach.theme.css
+++ b/Peach.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Peach","description":"The Great Princess Peach Theme","author":"DevilsTheAvenged","version":"2"}*//{}
+//META{"name":"Peach","description":"The Great Princess Peach Theme","author":"DevilsTheAvenged","version":"2.1"}*//{}
 @import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/SomeUnImportantStuff/ThemeFixerv2.theme.css);
 .app,
 .callout-backdrop,
@@ -921,14 +921,18 @@ color: white !important;
 }
 [class*="option user selected"]
 {
-    background: #5BA949 !important;
+    background: #F14E91 !important;
 }
 [class*="option user selected"]::before
 {
-    background: #5BA949 !important;
+    background: #F14E91 !important;
 }
 [class*="option selected"] {
-    background: #5BA949 !important;
+    background: #F14E91 !important;
+}
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group:hover .action-buttons {
+    background-color: transparent;
+    box-shadow: none !important;
 }
 [class*="displayed-nick"] {
     color: white !Important;
@@ -996,16 +1000,16 @@ color: white !important;
     color: white;
     height: 25px;
 }
-.theme-dark .channel-members-loading {
+.theme-dark .members-1bid1J-loading {
  background-image: url(https://dncache-mauganscorp.netdna-ssl.com/thumbseg/1780/1780462-bigthumbnail.jpg) !important;
  background-size: cover !Important;
  background-position: 50% 10% !important;
  opacity: 0.6 !important;
 }
-.channel-members-loading .heading, .channel-members-loading .member {
+.members-1bid1J-loading .heading, .members-1bid1J-loading .member {
  background: transparent !important;
 }
-.theme-dark .channel-members-loading .background {
+.theme-dark .members-1bid1J-loading .background {
  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(241,78,145, 0.5), rgba(0, 0, 0, 0));
 }
 
@@ -1051,7 +1055,7 @@ color: white !important;
     margin: 0 auto;
     color: white;
 }
-.theme-dark .themed-popout {
+.theme-dark .popout .messages-popout-wrap {
     background-color: #F33C88 !important /* Darker Color */;
     border: 3px solid #F599B2 /* Border Color */;
 }
@@ -1066,7 +1070,7 @@ color: white !important;
     color: rgba(255,255,255, 0.6) /* Font Color */;
 }
 .theme-dark .search-results-wrap {
-    background: rgba(40,74,18,0.7) !important /* Middle Color */;
+    background: rgba(247, 81, 125,0.7) !important /* Middle Color */;
 }
 .need-help-modal.deprecated a,.need-help-modal.deprecated a:hover {
     color: white;
@@ -1075,8 +1079,8 @@ color: white !important;
     background-color: #F33C88 /* Darker Color */;
     color: white;
 }
-.theme-dark .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button, .theme-dark .search-results-wrap .action-buttons .jump-button {
-    background: #f7517d /* Middle Color */;
+.theme-dark .popout .messages-popout-wrap .messages-popout .message-group .action-buttons .jump-button, .theme-dark .search-results-wrap .action-buttons .jump-button {
+    background: #f7517d !important /* Middle Color */;
     color: white !important;
     border: 3px solid #F599B2 /* Border Color */;
 }
@@ -1462,11 +1466,11 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 /* Main Chat Area Stuff */
 
-.channel-members .avatar-small {
+.members-1bid1J .avatar-small {
     border: 3px solid #F599B2;
     background-color: #F33C88;
 }
-.channel-members .avatar-small .status {
+.members-1bid1J .avatar-small .status {
     border: 3px solid black !important;
     bottom: -2px;
     right: -2px;
@@ -1474,7 +1478,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     height: 13px;
     border-radius: 50%;
 }
-.channel-members .avatar-small .status.status-typing {
+.members-1bid1J .avatar-small .status.status-typing {
     border: 3px solid black !important;
     bottom: -2px!important;
     right: -2px !important;
@@ -1540,7 +1544,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     font-size: 12px;
     text-align: center;
 }
-.scroller-fzNley.channel-members {
+.scroller-fzNley.members-1bid1J {
     background: rgba(0,0,0,0.21) !important;
 }
 .theme-dark .message-group a {
@@ -1714,7 +1718,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     color: rgba(255, 255, 255, 1) !important;
     font-size: 14px;
 }
-.theme-dark .channel-members h2 {
+.theme-dark .membersGroup-3_dP5E {
     color: white;
     background: rgba(243,60,136,.5);
     padding-top: 12px;
@@ -1860,7 +1864,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .tooltip.tooltip-black.tooltip-left:after {
     border-left: none;
 }
-.theme-dark .topic-1KFf6J,.channel-members .member .member-activity-text,.theme-dark .channelName-1G03vu, .theme-dark .groupDM-3gzbyG .channelName-1G03vu, .theme-dark .groupDMManaged-2z2S1A .channelName-1G03vu,.channelIcon-1KtcMW,.name-3gtcmp {
+.theme-dark .topic-1KFf6J,.members-1bid1J .member .member-activity-text,.theme-dark .channelName-1G03vu, .theme-dark .groupDM-3gzbyG .channelName-1G03vu, .theme-dark .groupDMManaged-2z2S1A .channelName-1G03vu,.channelIcon-1KtcMW,.name-3gtcmp {
     color: white;
 }
 .theme-dark .activityIconForeground-1o4t0w {
